# dataops-adk-agent

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  BUSINESS_USE_CASES.md  DEVELOPERS_GUIDE.md  Dockerfile  PROJECT_STRUCTURE.md  docker-compose.yml  main.py  pyproject.toml  readme.md  run_docker.sh  run_production.sh  run_streamlit.sh  setup.sh
agent-deployment/: deploy.py  test_deployment.py
app/: app.py
dataops/: .env  .env.example  Dockerfile  agent.py  prompt.py  tools.py
dataops/prompt-template/: github_analysis_example.j2  github_repos_tables.json  github_table_structure.j2
infra/: main.tf  outputs.tf  terraform.tfvars  variables.tf
